--- a/Source/Panama/View/LinkView.xaml
+++ b/Source/Panama/View/LinkView.xaml
@@ -32,10 +32,15 @@
         </Grid>
         
         <!-- Main data grid to display the tabular data  -->
-        <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}">
+        <DataGrid x:Name="grid" Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}">
             <DataGrid.ContextMenu>
                 <ContextMenu ItemsSource="{Binding MenuItems}"/>
             </DataGrid.ContextMenu>
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.OpenRowCommand}"/>
+                </Style>
+            </DataGrid.RowStyle>            
         </DataGrid>
         <!-- Nested editing control on the right -->
         <view:LinkEdit Grid.Row="1" Grid.Column="1" Visibility="{Binding EditVisibility}"/>
