--- a/Source/Panama/View/Windows/AboutWindow.xaml
+++ b/Source/Panama/View/Windows/AboutWindow.xaml
@@ -2,7 +2,12 @@
     x:Class="Restless.App.Panama.View.AboutWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="About" Height="350" Width="525" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen">
+    xmlns:r="clr-namespace:Restless.App.Panama.Resources"
+    Title="About" 
+    Height="480" Width="532" 
+    ResizeMode="NoResize" 
+    ShowInTaskbar="False" 
+    WindowStartupLocation="CenterScreen">
     
     <Grid Background="{StaticResource HorizontalLightBrush}">
         <Grid.ColumnDefinitions>
@@ -14,6 +19,7 @@
             </Style>          
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="4"/>
+                <Setter Property="TextWrapping" Value="Wrap"/>
             </Style>
         </Grid.Resources>
         <StackPanel Grid.Column="0">
@@ -27,15 +33,24 @@
             </TextBlock>
             <TextBlock Text="{Binding Path=AppInfo.Assembly.Company, Mode=OneTime}" />
             <TextBlock Text="{Binding Path=AppInfo.Assembly.Copyright, Mode=OneTime}" />
-            <TextBlock Text="{Binding Path=AppInfo.Assembly.Description, Mode=OneTime}" TextWrapping="Wrap" />
-            <Label>Framework</Label>
+            <TextBlock Text="{Binding Path=AppInfo.Assembly.Description, Mode=OneTime}" />
+            <TextBlock>Framework</TextBlock>
             <TextBlock Margin="18,0" Text="{Binding Path=AppInfo.Assembly.FrameworkVersion, Mode=OneTime}" />
-            <Label>Executable</Label>
-            <TextBlock Margin="18,0" Text="{Binding Path=AppInfo.Assembly.Location, Mode=OneTime}" TextWrapping="Wrap" />
-            <Label>64 Bit</Label>
+            <TextBlock>Executable</TextBlock>
+            <TextBlock Margin="18,0" Text="{Binding Path=AppInfo.Assembly.Location, Mode=OneTime}" />
+            <TextBlock>64 Bit</TextBlock>
             <TextBlock Margin="18,0" Text="{Binding Path=AppInfo.Is64Bit, Mode=OneTime}" />
-            <Label>Database</Label>
-            <TextBlock  Margin="18,0" Text="{Binding Path=AppInfo.DatabaseFileName, Mode=OneTime}" TextWrapping="Wrap" />
+            <TextBlock>Database</TextBlock>
+            <TextBlock  Margin="18,0" Text="{Binding Path=AppInfo.DatabaseFileName, Mode=OneTime}" />
+            
+            <Grid Margin="16,20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Image Source="{StaticResource ImageTitle}" Height="64"/>
+                <TextBlock Margin="8,0" Grid.Column="1" Text="{x:Static r:Strings.CaptionIconsDesigned1}"/>
+            </Grid>
         </StackPanel>
     </Grid>
 </Window>
