Formatting update to submission display

--- a/Source/Panama/Resources/App.Controls.xaml
+++ b/Source/Panama/Resources/App.Controls.xaml
@@ -127,4 +127,8 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+
+    <Style TargetType="TextBlock" x:Key="TextBlockRight">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+    </Style>
 </ResourceDictionary>
