Add preview capability to documents associated with a submission.

--- a/Source/Panama/View/EditControls/SubmissionEditWithTab.xaml
+++ b/Source/Panama/View/EditControls/SubmissionEditWithTab.xaml
@@ -5,6 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:vw="clr-namespace:Restless.App.Panama.View"
+    xmlns:r="clr-namespace:Restless.App.Panama.Resources"
     xmlns:con="clr-namespace:Restless.App.Panama.Controls"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
     mc:Ignorable="d" 
@@ -15,7 +16,7 @@
     <con:TabControlExtended>
         <TabControl.Items>
             <!-- Main data: flags, fees, notes -->
-            <TabItem Header="Data">
+            <TabItem Header="{x:Static r:Strings.HeaderData}">
                 <DockPanel>
                     <Label DockPanel.Dock="Top">Flags</Label>
                     <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="8,0">
@@ -42,7 +43,7 @@
                 </DockPanel>
             </TabItem>
             <!-- Submitted and response dates  -->
-            <TabItem Header="Dates">
+            <TabItem Header="{x:Static r:Strings.HeaderDates}">
                 <StackPanel>
                     <Expander Header="{Binding Submitted.Header}" IsExpanded="False">
                         <con:CalendarExtended SelectedDate="{Binding Submitted.SubmittedDate}" DisplayDate="{Binding Submitted.DisplayDate,Mode=OneWay}" HorizontalAlignment="Left"/>
@@ -98,26 +99,35 @@
             </TabItem>
             <!-- Documents -->
             <TabItem Header="{Binding Documents.Header}">
-                <StackPanel>
-                    <DataGrid x:Name="grid2" Style="{StaticResource DataGridEdit}" ItemsSource="{Binding Path=Documents.DataView}" SelectedItem="{Binding Documents.SelectedItem}" con:DataGridColumns.Columns="{Binding Documents.Columns}">
+                <DockPanel>
+                    <DataGrid DockPanel.Dock="Top" x:Name="grid2" Style="{StaticResource DataGridEdit}" ItemsSource="{Binding Path=Documents.DataView}" SelectedItem="{Binding Documents.SelectedItem}" con:DataGridColumns.Columns="{Binding Documents.Columns}">
                         <DataGrid.RowStyle>
                             <Style TargetType="DataGridRow">
                                 <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid2, Path=DataContext.Documents.OpenRowCommand}"/>
                             </Style>
                         </DataGrid.RowStyle>
                     </DataGrid>
-                    <ToolBarTray>
+                    <ToolBarTray DockPanel.Dock="Top">
                         <ToolBar Style="{StaticResource ToolBarCommandHolder}">
                             <Button Command="{Binding RawCommands[DocumentAdd]}" Content="Create" ToolTip="Create a document to associate with this submission"/>
                             <Button Command="{Binding RawCommands[DocumentReplace]}" Content="Replace" ToolTip="Replace the selected document with another file"/>
                             <Button Command="{Binding RawCommands[DocumentRemove]}" Content="Remove" ToolTip="Remove the selected document (does not affect the file system)"/>
                         </ToolBar>
                     </ToolBarTray>
-                    <StackPanel Margin="0,8" Visibility="{Binding Documents.EditVisibility}">
-                        <Label>Document title</Label>
-                        <TextBox Text="{Binding Documents.SelectedRow[title]}"/>
-                    </StackPanel>
-                </StackPanel>
+                    <DockPanel DockPanel.Dock="Top" Margin="0,8" Visibility="{Binding Documents.EditVisibility}">
+                        <Label DockPanel.Dock="Top">Document title</Label>
+                        <TextBox DockPanel.Dock="Top" Text="{Binding Documents.SelectedRow[title]}"/>
+                        <Expander DockPanel.Dock="Top" Header="{x:Static r:Strings.HeaderPreview}" IsExpanded="{Binding Documents.IsPreviewMode}">
+                            <DockPanel VerticalAlignment="Stretch">
+                                <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockError}" Margin="8" VerticalAlignment="Top" Visibility="{Binding Documents.IsOpenXml,Converter={cv:BooleanToVisibilityConverter},ConverterParameter={StaticResource BooleanFalseToVisibility}}">
+                        The text for this document cannot be displayed. Only Open Xml documents are supported.
+                                </TextBlock>
+                                <TextBox DockPanel.Dock="Top" Style="{StaticResource TextBoxMultiFull}" Margin="4,8" Text="{Binding Documents.PreviewText,Mode=OneWay}" Visibility="{Binding Documents.IsOpenXml,Converter={cv:BooleanToVisibilityConverter}}"/>
+                            </DockPanel>
+                            <!--<TextBox DockPanel.Dock="Top" Style="{StaticResource TextBoxMultiFull}" Margin="4,8" Text="{Binding Documents.PreviewText,Mode=OneWay}" Visibility="{Binding Documents.IsOpenXml,Converter={cv:BooleanToVisibilityConverter}}"/>-->
+                        </Expander>
+                    </DockPanel>
+                </DockPanel>
             </TabItem>
             <!-- Messages -->
             <TabItem Header="{Binding Messages.Header}">
